# polygonCal

./: CMakeLists.txt  README.md
googletest/: CMakeLists.txt  PointerTest.cpp  PolygonCalTest.cpp  SquareCalTest.cpp  TriCalTest.cpp
include/: basicPtr.h
src/: Aux.h  CMakeLists.txt  Point.h  PolygonCal.cpp  PolygonCal.h  ShapeCal.h  SquareCal.cpp  SquareCal.h  TriCal.cpp  TriCal.h  main.cpp
